--- a/Meu primeiro site/index.html
+++ b/Meu primeiro site/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first site </title>
+    <link rel="stylesheet" href="estilo.css"
 </head>
 <body>
     <h1>Hello,word"</h1>
-    <p>fase teste</p>
+    <p>Óla seja bem-vindo ao meu site experimental , o intuito desse site é testa meus conhecimentos em Html E Css e me siga pra essa jornada de conhecimento.</p>
+ 
+
 </body>
 </html>
