--- a/Meu primeiro site/index.html
+++ b/Meu primeiro site/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello,word"</h1>
-    <p>Óla seja bem-vindo ao meu site experimental , o intuito desse site é testa meus conhecimentos em Html E Css e me siga pra essa jornada de conhecimento.</p>
+    <p>Óla seja bem-vindo ao meu site experimental , o intuito desse site é testar meus conhecimentos em Html E Css, me siga para essa jornada extraordinaria de conhecimento.</p>
  
 
 </body>
